# gpt2

./: .gitignore  README.md  actual_gpt2_eval.ipynb  hello.py  model.py  pyproject.toml  train.py  train.sh
config/: 3090.sh  8xH100.sh
data/: prep_data.py
src/: data.py  evals.py  model.py  train.py  utils.py
