[project]
name = "gpt2"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6.0",
    "numpy>=2.2.2",
    "datasets>=3.3.0",
    "tiktoken>=0.8.0",
    "tqdm>=4.67.0",
    "wandb==0.19.0"
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124" } 
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true